--- a/dashboard/pages/contracts.html
+++ b/dashboard/pages/contracts.html
@@ -1,10 +1,10 @@
 <!-- Contratos Page -->
 <div class="contracts-section">
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h2>Meus Contratos</h2>
+        <h2>🎯 Meus Contratos</h2>
         <div class="d-flex gap-2">
-            <button class="btn btn-success" onclick="dashboardManager.showSection('new-contract')">
-                <i class="fas fa-plus"></i> Novo Contrato
+            <button class="btn btn-primary" onclick="dashboardManager.showSection('new-contract')">
+                <i class="fas fa-plus"></i> Cadastrar Contrato
             </button>
             <button class="btn btn-outline-primary" onclick="dashboardManager.refreshContracts()">
                 <i class="fas fa-sync-alt"></i> Atualizar
@@ -12,7 +12,7 @@
         </div>
     </div>
 
-    <!-- Filtros de  -->
+    <!-- Filtros -->
     <div class="card mb-4">
         <div class="card-body">
             <div class="row g-3">
