--- a/dashboard/pages/overview.html
+++ b/dashboard/pages/overview.html
@@ -1,8 +1,11 @@
 <!-- Dashboard Overview -->
 <div class="overview-section">
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h2>Dashboard Overview</h2>
+        <h2>📊 Visão Geral</h2>
         <div class="d-flex gap-2">
+            <button class="btn btn-primary" onclick="dashboardManager.showSection('new-contract')">
+                <i class="fas fa-plus me-2"></i>Novo Contrato
+            </button>
             <button class="btn btn-outline-primary btn-sm" onclick="dashboardManager.refreshData()">
                 <i class="fas fa-sync-alt"></i> Atualizar
             </button>
@@ -16,16 +19,16 @@
                 <div class="card-body text-center">
                     <i class="fas fa-cube stat-icon text-primary mb-2"></i>
                     <h3 id="total-widgets" class="stat-number">0</h3>
-                    <p class="stat-label">Widgets Ativos</p>
+                    <p class="stat-label">Contratos</p>
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="card stat-card">
                 <div class="card-body text-center">
-                    <i class="fas fa-dollar-sign stat-icon text-success mb-2"></i>
-                    <h3 id="total-earnings" class="stat-number">R$ 0,00</h3>
-                    <p class="stat-label">Ganhos Totais</p>
+                    <i class="fas fa-shopping-cart stat-icon text-success mb-2"></i>
+                    <h3 id="total-earnings" class="stat-number">0</h3>
+                    <p class="stat-label">Vendas</p>
                 </div>
             </div>
         </div>
@@ -34,16 +37,16 @@
                 <div class="card-body text-center">
                     <i class="fas fa-coins stat-icon text-warning mb-2"></i>
                     <h3 id="available-credits" class="stat-number">0</h3>
-                    <p class="stat-label">Créditos Disponíveis</p>
+                    <p class="stat-label">Volume (ETH)</p>
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="card stat-card">
                 <div class="card-body text-center">
-                    <i class="fas fa-chart-line stat-icon text-info mb-2"></i>
+                    <i class="fas fa-percentage stat-icon text-info mb-2"></i>
                     <h3 id="monthly-views" class="stat-number">0</h3>
-                    <p class="stat-label">Visualizações Este Mês</p>
+                    <p class="stat-label">Taxas Ganhas</p>
                 </div>
             </div>
         </div>
@@ -79,6 +82,42 @@
                         <div class="text-center py-4">
                             <i class="fas fa-spinner fa-spin"></i>
                             <p class="mt-2">Carregando atividades...</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Como Funciona -->
+    <div class="row mb-4">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="mb-0"><i class="fas fa-info-circle me-2"></i>Como Funciona</h5>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-4 mb-3">
+                            <div class="text-center">
+                                <i class="fas fa-plus-circle fa-3x text-primary mb-3"></i>
+                                <h6>1. Cadastre seu Contrato</h6>
+                                <p class="text-muted small">Informe apenas a rede e endereço do contrato. Pegamos o resto automaticamente via Web3.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            <div class="text-center">
+                                <i class="fas fa-code fa-3x text-success mb-3"></i>
+                                <h6>2. Gere o Widget</h6>
+                                <p class="text-muted small">Receba o código para integrar em seu site. Sistema igual ao xcafe.app.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            <div class="text-center">
+                                <i class="fas fa-chart-line fa-3x text-warning mb-3"></i>
+                                <h6>3. Ganhe Comissões</h6>
+                                <p class="text-muted small">2% de comissão automática sobre cada venda + sistema de créditos.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
