--- a/embreve.html
+++ b/embreve.html
@@ -337,7 +337,7 @@
                     <i class="fas fa-sign-in-alt"></i>
                     Fazer Login
                 </a>
-                <a href="dashboard-modular.html" class="btn btn-secondary">
+                <a href="dashboard.html" class="btn btn-secondary">
                     <i class="fas fa-tachometer-alt"></i>
                     Dashboard
                 </a>
