--- a/header.html
+++ b/header.html
@@ -48,7 +48,7 @@
                         <i class="fas fa-cube me-1"></i>Serviços
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="dashboard-modular.html">
+                        <li><a class="dropdown-item" href="dashboard.html">
                             <i class="fas fa-chart-line me-2"></i>Dashboard
                         </a></li>
                         <li><a class="dropdown-item" href="#">
