we3js atulizado

--- a/auth.html
+++ b/auth.html
@@ -86,7 +86,7 @@
     <script src="js/auth-page.js"></script>
 
     <!-- JavaScript Unificado -->
-    <script src="js/shared/web3.js"></script>
+    <script src="js/modules/web3.js"></script>
     <script src="js/shared/api.js"></script>
     <script src="js/shared/auth.js"></script>
     <script src="js/xcafe-app.js"></script>
