--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@ Sistema oficial de dashboard da aplicação.
     <link href="css/dashboard.css" rel="stylesheet">
     
     <!-- JavaScript Modular -->
-    <script src="js/shared/web3.js"></script>
+    <script src="js/modules/web3.js"></script>
     <script src="js/shared/template-loader.js"></script>
     <script src="js/modules/dashboard.js"></script>
 </head>
