--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 
     <!-- Módulos Core (ordem importante) -->
     <script src="js/modules/data-manager.js"></script>
-    <script src="js/modules/web3-manager.js"></script>
+    <script src="js/modules/web3.js"></script>
     <script src="js/modules/auth-manager.js"></script>
     <script src="js/modules/header-controller.js"></script>
     <script src="js/modules/widget-sale.js"></script>
