--- a/admin-panel.html
+++ b/admin-panel.html
@@ -628,7 +628,7 @@ RECURSOS TÉCNICOS:
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- JavaScript Unificado -->
-    <script src="js/shared/web3.js"></script>
+    <script src="js/modules/web3.js"></script>
     <script src="js/shared/api.js"></script>
     <script src="js/shared/auth.js"></script>
     <script src="js/xcafe-app.js"></script>
