Feito: Adicionar script de remoção de elemento de carteira e modal de suporte
- Implementação de uma classe SupportModalManager para gerenciar um modal universal de suporte/contato.
- Adição de funcionalidade para carregar HTML modal dinamicamente e gerenciar envios de formulário.
- Inclusão de recurso de preenchimento automático para endereço de carteira no formulário de suporte.
- Criação de um script para localizar e remover elementos flutuantes relacionados à carteira do DOM.
- Inicialização dos arquivos de dados necessários para chaves de API, créditos, logs do sistema, transações e usuários.

--- a/admin-panel.html
+++ b/admin-panel.html
@@ -46,8 +46,8 @@ RECURSOS TÉCNICOS:
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
-    <!-- CSS Unificado do Sistema -->
-    <link href="css/app.css" rel="stylesheet">
+    <!-- CSS UNIFICADO - Substitui app.css + menu.css + admin.css -->
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
     <!-- 
