--- a/auth.html
+++ b/auth.html
@@ -7,10 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
-    <!-- CSS Unificado -->
-    <link href="css/app.css" rel="stylesheet">
-    <!-- Auth CSS -->
-    <link href="css/auth.css" rel="stylesheet">
+    <!-- CSS UNIFICADO - Substitui app.css + auth.css -->
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
