--- a/dashboard.html
+++ b/dashboard.html
@@ -18,9 +18,8 @@ Sistema oficial de dashboard da aplicação.
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
-    <!-- CSS Unificado -->
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/dashboard.css" rel="stylesheet">
+    <!-- CSS UNIFICADO - Substitui main.css + menu.css + dashboard.css -->
+    <link href="css/styles.css" rel="stylesheet">
     
     <!-- JavaScript Modular -->
     <script src="js/modules/web3.js"></script>
