--- a/header.html
+++ b/header.html
@@ -1,9 +1,6 @@
-<!-- Header CSS -->
-<link href="css/header.css" rel="stylesheet">
-
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
     <div class="container">
-        <!-- Brand -->
+        <!-- Brand - Logo sozinha à esquerda -->
         <a class="navbar-brand" href="index.html">
             <i class="fas fa-cube me-2 text-primary"></i>
             <span class="fw-bold text-primary">Widget SaaS</span>
@@ -14,112 +11,54 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <!-- Navigation -->
+        <!-- Navigation - Tudo alinhado à direita -->
         <div class="collapse navbar-collapse" id="navbarNav">
-            <!-- Menu Items -->
-            <ul class="navbar-nav me-auto">
+
+            <!-- Menu Items - Alinhado à direita -->
+            <ul class="navbar-nav ms-auto me-3">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">
-                        <i class="fas fa-home me-1"></i>Início
+                    <a class="nav-link" href="#features">
+                        <i class="fas fa-puzzle-piece me-0"></i>Widgets
                     </a>
                 </li>
-                
-                <!-- Dropdown: Recursos -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-star me-1"></i>Recursos
+                <li class="nav-item">
+                    <a class="nav-link" href="#how-it-works">
+                        <i class="fas fa-cogs me-0"></i>4 Passos
                     </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#features">
-                            <i class="fas fa-puzzle-piece me-2"></i>Widgets
-                        </a></li>
-                        <li><a class="dropdown-item" href="#how-it-works">
-                            <i class="fas fa-cogs me-2"></i>Como Funciona
-                        </a></li>
-                        <li><a class="dropdown-item" href="#demo">
-                            <i class="fas fa-play me-2"></i>Demonstração
-                        </a></li>
-                    </ul>
                 </li>
-
-                <!-- Dropdown: Serviços -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-cube me-1"></i>Serviços
+                <li class="nav-item">
+                    <a class="nav-link" href="#demo">
+                        <i class="fas fa-play me-0"></i>Demonstração
                     </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="dashboard.html">
-                            <i class="fas fa-chart-line me-2"></i>Dashboard
-                        </a></li>
-                        <li><a class="dropdown-item" href="#">
-                            <i class="fas fa-plus me-2"></i>Criar Widget
-                        </a></li>
-                        <li><a class="dropdown-item" href="#">
-                            <i class="fas fa-code me-2"></i>API
-                        </a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#pricing">
-                            <i class="fas fa-dollar-sign me-2"></i>Preços
-                        </a></li>
-                    </ul>
                 </li>
-
-                <!-- Dropdown: Suporte -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-life-ring me-1"></i>Suporte
+                <li class="nav-item">
+                    <a class="nav-link" href="#pricing">
+                        <i class="fas fa-dollar-sign me-0"></i>Preço
                     </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">
-                            <i class="fas fa-book me-2"></i>Documentação
-                        </a></li>
-                        <li><a class="dropdown-item" href="#">
-                            <i class="fas fa-video me-2"></i>Tutoriais
-                        </a></li>
-                        <li><a class="dropdown-item" href="#">
-                            <i class="fas fa-comments me-2"></i>Contato
-                        </a></li>
-                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0)" onclick="openSupportModalDirect()">
+                        <i class="fas fa-headset me-0"></i>Contato
+                    </a>
                 </li>
             </ul>
 
-            <!-- Wallet Connection Area -->
-            <div class="d-flex align-items-center gap-3">
-                <!-- Botão de Carteira - Padrão XCafe -->
-                <button id="connect-wallet-btn" class="btn btn-sm wallet-btn" title="Conectar Carteira">
-                    <i class="fas fa-wallet me-1"></i>
+            <!-- Área de Controles - Carteira -->
+            <div class="d-flex align-items-center gap-2">
+                <!-- Botão de Conectar Carteira - Simples -->
+                <button id="connect-wallet-btn" class="btn btn-outline-primary btn-sm" 
+                        type="button" title="Conectar Carteira">
+                    <i class="fas fa-wallet"></i>
                     <span id="wallet-text">Conectar</span>
                 </button>
-                
-                <!-- Botão de Idiomas - Padrão XCafe -->
-                <div class="dropdown">
-                    <button class="btn btn-sm btn-primary dropdown-toggle language-btn" type="button" 
-                            data-bs-toggle="dropdown" aria-expanded="false" title="Selecionar Idioma">
-                        <span id="current-flag">🇧🇷</span>
-                        <span class="d-none d-md-inline ms-1" id="current-lang">PT</span>
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="#" data-lang="pt" data-flag="🇧🇷">
-                            🇧🇷 Português
-                        </a></li>
-                        <li><a class="dropdown-item" href="#" data-lang="en" data-flag="🇺🇸">
-                            🇺🇸 English
-                        </a></li>
-                        <li><a class="dropdown-item" href="#" data-lang="es" data-flag="🇪🇸">
-                            🇪🇸 Español
-                        </a></li>
-                        <li><a class="dropdown-item" href="#" data-lang="fr" data-flag="🇫🇷">
-                            🇫🇷 Français
-                        </a></li>
-                    </ul>
-                </div>
             </div>
-
-            <!-- Google Translate Element (Invisível) -->
-            <div id="google_translate_element" style="display: none;"></div>
         </div>
     </div>
 </nav>
 
+<!-- Template Loader -->
+<script src="js/shared/template-loader.js"></script>
 <!-- Header JavaScript -->
 <script src="js/header.js"></script>
+<!-- Support Modal JavaScript -->
+<script src="js/shared/support-modal.js"></script>
