feat: Implement optimized XCafe App initialization and modular managers
- Added XCafeApp class for unified initialization and coordination.
- Implemented loading of configuration and managers in a specific order.
- Set up global event listeners for template loading, authentication state changes, and network changes.
- Created page-specific initialization methods for different pages (index, dashboard, auth, admin).
- Added utility functions for managing UI updates based on authentication and network status.
- Introduced a public API for accessing managers and loaded modules.

chore: Add reusable support section in support.html

- Created a modal for support with contact options (Email, Telegram, Discord, WhatsApp).
- Included a contact form for user inquiries with validation.
- Added sections for resources, FAQs, and bug reporting.
- Implemented JavaScript for form submission and modal handling.
- Styled the support section for better user experience.

--- a/footer.html
+++ b/footer.html
@@ -1,54 +1,69 @@
-<div class="container">
-    <div class="row">
-        <div class="col-lg-4">
-            <h5 class="mb-3">
-                <i class="fas fa-cube me-2"></i>
-                Widget SaaS
-            </h5>
-            <p class="text-muted">
-                A plataforma mais avançada para monetização de sites
-                através de widgets de tokens.
-            </p>
+<!-- Footer -->
+<footer class="bg-primary text-white py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <h5 class="mb-3 text-white">
+                    <i class="fas fa-cube me-2 text-white fs-3"></i>
+                    <span class="fw-bold text-white fs-4">Widget SaaS</span>
+                </h5>
+                <p class="text-white-50 mb-3">
+                    A plataforma mais avançada para monetização de sites
+                    através de widgets de tokens.
+                </p>
+                <!-- Ícones de Redes Sociais -->
+                <div class="social-icons">
+                    <a href="#" class="text-white me-3" title="Instagram">
+                        <i class="fab fa-instagram fs-4"></i>
+                    </a>
+                    <a href="#" class="text-white me-3" title="Twitter/X">
+                        <i class="fab fa-twitter fs-4"></i>
+                    </a>
+                    <a href="#" class="text-white" title="Telegram">
+                        <i class="fab fa-telegram fs-4"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <h6 class="mb-3 text-white">Produto</h6>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><a href="#features" class="footer-link">Recursos</a></li>
+                    <li class="mb-2"><a href="#demo" class="footer-link">Demo</a></li>
+                    <li class="mb-2"><a href="#pricing" class="footer-link">Preços</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-2">
+                <h6 class="mb-3 text-white">Empresa</h6>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><span class="footer-text">Sobre</span></li>
+                    <li class="mb-2"><span class="footer-text">Blog</span></li>
+                    <li class="mb-2"><a href="#support" class="footer-link">Contato</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-2">
+                <h6 class="mb-3 text-white">Suporte</h6>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><span class="footer-text">Ajuda</span></li>
+                    <li class="mb-2"><span class="footer-text">Documentação</span></li>
+                    <li class="mb-2"><span class="footer-text">Status</span></li>
+                </ul>
+            </div>
+            <div class="col-lg-2">
+                <h6 class="mb-3 text-white">Legal</h6>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><span class="footer-text">Privacidade</span></li>
+                    <li class="mb-2"><span class="footer-text">Termos</span></li>
+                </ul>
+            </div>
         </div>
-        <div class="col-lg-2">
-            <h6 class="mb-3">Produto</h6>
-            <ul class="list-unstyled">
-                <li class="mb-2"><a href="#features" class="text-decoration-none">Recursos</a></li>
-                <li class="mb-2"><a href="#demo" class="text-decoration-none">Demo</a></li>
-                <li class="mb-2"><a href="#pricing" class="text-decoration-none">Preços</a></li>
-            </ul>
-        </div>
-        <div class="col-lg-2">
-            <h6 class="mb-3">Empresa</h6>
-            <ul class="list-unstyled">
-                <li class="mb-2"><a href="#" class="text-decoration-none">Sobre</a></li>
-                <li class="mb-2"><a href="#" class="text-decoration-none">Blog</a></li>
-                <li class="mb-2"><a href="#" class="text-decoration-none">Contato</a></li>
-            </ul>
-        </div>
-        <div class="col-lg-2">
-            <h6 class="mb-3">Suporte</h6>
-            <ul class="list-unstyled">
-                <li class="mb-2"><a href="#" class="text-decoration-none">Ajuda</a></li>
-                <li class="mb-2"><a href="#" class="text-decoration-none">Documentação</a></li>
-                <li class="mb-2"><a href="#" class="text-decoration-none">Status</a></li>
-            </ul>
-        </div>
-        <div class="col-lg-2">
-            <h6 class="mb-3">Legal</h6>
-            <ul class="list-unstyled">
-                <li class="mb-2"><a href="#" class="text-decoration-none">Privacidade</a></li>
-                <li class="mb-2"><a href="#" class="text-decoration-none">Termos</a></li>
-            </ul>
+        <hr class="my-4 border-white-50">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <p class="text-white-50 mb-0">© 2024 Widget SaaS. Todos os direitos reservados.</p>
+            </div>
+            <div class="col-md-6 text-end">
+                <span class="text-white-50">Feito com <i class="fas fa-heart text-danger"></i> no Brasil</span>
+            </div>
         </div>
     </div>
-    <hr class="my-4">
-    <div class="row align-items-center">
-        <div class="col-md-6">
-            <p class="mb-0">© 2024 Widget SaaS. Todos os direitos reservados.</p>
-        </div>
-        <div class="col-md-6 text-end">
-            <span>Feito com <i class="fas fa-heart text-danger"></i> no Brasil</span>
-        </div>
-    </div>
-</div>
+</footer>
