--- a/footer.html
+++ b/footer.html
@@ -3,9 +3,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4">
-                <h5 class="mb-3 text-white">
-                    <i class="fas fa-cube me-2 text-white fs-3"></i>
-                    <span class="fw-bold text-white fs-4">Widget SaaS</span>
+                <h5 class="mb-0 text-white">
+                    <a class="menu-item header-link" href="index.html">
+                        <i class="fas fa-cube me-2 text-white fs-3"></i>
+                        <span class="fw-bold text-white fs-4">Widget SaaS</span>
+                    </a>
                 </h5>
                 <p class="text-white-50 mb-3">
                     A plataforma mais avançada para monetização de sites
@@ -19,44 +21,49 @@
                     <a href="#" class="text-white me-3" title="Twitter/X">
                         <i class="fab fa-twitter fs-4"></i>
                     </a>
-                    <a href="#" class="text-white" title="Telegram">
+                    <a href="#" class="text-white me-3" title="Telegram">
                         <i class="fab fa-telegram fs-4"></i>
+                    </a>
+                    <a href="https://wa.me/5543999446606" class="text-white me-3" title="WhatsApp">
+                        <i class="fab fa-whatsapp fs-4"></i>
                     </a>
                 </div>
             </div>
             <div class="col-lg-2">
                 <h6 class="mb-3 text-white">Produto</h6>
                 <ul class="list-unstyled">
-                    <li class="mb-2"><a href="#features" class="footer-link">Recursos</a></li>
-                    <li class="mb-2"><a href="#demo" class="footer-link">Demo</a></li>
-                    <li class="mb-2"><a href="#pricing" class="footer-link">Preços</a></li>
+                    <li class="mb-2"><a href="#features" class="menu-item footer-link">Recursos</a></li>
+                    <li class="mb-2"><a href="#demo" class="menu-item footer-link">Demo</a></li>
+                    <li class="mb-2"><a href="#pricing" class="menu-item footer-link">Preços</a></li>
                 </ul>
             </div>
             <div class="col-lg-2">
                 <h6 class="mb-3 text-white">Empresa</h6>
                 <ul class="list-unstyled">
-                    <li class="mb-2"><span class="footer-text">Sobre</span></li>
-                    <li class="mb-2"><span class="footer-text">Blog</span></li>
-                    <li class="mb-2"><a href="#support" class="footer-link">Contato</a></li>
+                    <li class="mb-2"><span class="menu-item footer-link">Sobre</span></li>
+                    <li class="mb-2"><span class="menu-item footer-link">Blog</span></li>
+                    <li class="mb-2"><a href="#support" class="menu-item footer-link">Contato</a></li>
                 </ul>
             </div>
             <div class="col-lg-2">
                 <h6 class="mb-3 text-white">Suporte</h6>
                 <ul class="list-unstyled">
-                    <li class="mb-2"><span class="footer-text">Ajuda</span></li>
-                    <li class="mb-2"><span class="footer-text">Documentação</span></li>
-                    <li class="mb-2"><span class="footer-text">Status</span></li>
+                    <li class="mb-2"><span class="menu-item footer-link">Ajuda</span></li>
+                    <li class="mb-2"><span class="menu-item footer-link">Documentação</span></li>
+                    <li class="mb-2"><span class="menu-item footer-link">Status</span></li>
                 </ul>
             </div>
             <div class="col-lg-2">
                 <h6 class="mb-3 text-white">Legal</h6>
                 <ul class="list-unstyled">
-                    <li class="mb-2"><span class="footer-text">Privacidade</span></li>
-                    <li class="mb-2"><span class="footer-text">Termos</span></li>
+                    <li class="mb-2"><span class="menu-item footer-link">Privacidade</span></li>
+                    <li class="mb-2"><span class="menu-item footer-link">Termos</span></li>
                 </ul>
             </div>
         </div>
-        <hr class="my-4 border-white-50">
+
+        <hr class="mt-4 mb-0 border-white-50">
+
         <div class="row align-items-center">
             <div class="col-md-6">
                 <p class="text-white-50 mb-0">© 2024 Widget SaaS. Todos os direitos reservados.</p>
@@ -66,4 +73,5 @@
             </div>
         </div>
     </div>
+
 </footer>
